--- a/public/admins/css/bootstrap-reset.css
+++ b/public/admins/css/bootstrap-reset.css
@@ -112,7 +112,7 @@ a:hover {
 .form-control {
     border: 1px solid #e2e2e4;
     box-shadow: none;
-    color: #c2c2c2;
+    color: #8e8585;
 }
 
 
